# bdsp_ug_generator_ui

./: Cargo.toml  bdsp_ug_generator_ui-c1005414e98c33f1.js  bdsp_ug_generator_ui-c1005414e98c33f1_bg.wasm  index.html  manifest.json  sw.js
.github/workflows/: rust.yml
docs/: README.md  bdsp_ug_generator_ui.js  bdsp_ug_generator_ui_bg.wasm  index.html  sw.js
resources/text/other/en/: species_en.txt
src/: lib.rs  main.rs
