[package]
name = "bdsp_ug_generator_ui"
default-run = "bdsp_ug_generator_ui_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bdsp_ug_generator_ui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
opt-level = 2

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[dependencies]
eframe = {version = "0.19.0", features = ["persistence"] }
bdsp_ug_generator = { git = "https://github.com/SteveCookTU/bdsp_ug_generator", rev = "78b0d2e"}
lazy_static = "1.4.0"
egui_extras = "0.19.0"